# Robotics_HW9

HW9/Question1/: compare_hw9q1.txt
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/hw9_1/: .rosinstall  setup.sh
devel/.private/hw9_1/lib/hw9_1/: tf_publisher
devel/.private/hw9_1/lib/pkgconfig/: hw9_1.pc
devel/.private/hw9_1/share/hw9_1/cmake/: hw9_1Config.cmake
devel/lib/hw9_1/: tf_publisher
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  hw9_1.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/hw9_1/cmake/: hw9_1Config-version.cmake  hw9_1Config.cmake
logs/hw9_1/: build.check.002.log.stderr  build.check.003.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.020.log.stderr  build.make.025.log.stderr
src/hw9_1/: CMakeLists.txt  package.xml  rviz.rviz  tf_publisher.cpp
src/hw9_1/launch/: display.launch
src/hw9_1/urdf/: three_link_manipulator.xacro
